test: add tests and code coverage (>80%)